fixed trailers grid display on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -798,13 +798,14 @@ p.claim {
 }
 .content-grids {
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
+	grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
 	grid-gap: 2em 0.5em;
 	max-width: 90%;
 	margin: 0 5%;
 }
 .trailerPoster {
 	max-height: 350px;
+	width: auto;
 }
 .last-grid{
 	margin-right:0px;
@@ -1944,9 +1945,7 @@ font-weight: 700;
 	.right-content-heading-left {
 		padding: 0 0 11px 0;
 	}
-	.content-grid {
-		width: 30.333%;
-	}
+
 	.last-grid {
 		display:none;
 	}
@@ -2199,8 +2198,8 @@ font-weight: 700;
 	}
 
 	.seat {
-		height: 1.5em;
-		width: 1.5em;
+		height: 1.4em;
+		width: 1.4em;
 		margin: .25em;
 	}
 
@@ -2429,9 +2428,7 @@ font-weight: 700;
 	.right-content-heading-left h3 {
 		font-size: 1.1em;
 	}
-	.content-grid {
-		width: 47%;
-	}
+
 	.right-content {
 		padding: 1.2em 0.5em;
 	}
